Revert "fix(article): remove overflow-x to resolve scrollbar issue in Tauri2 macOS build"
This reverts commit ae022807df6d047e570aa7d826a47355cb6fe9dd.

--- a/src/components/Article/ArticleList.css
+++ b/src/components/Article/ArticleList.css
@@ -3,6 +3,7 @@
   contain: strict;
   padding: 10px;
   height: 100%;
+  overflow-x: hidden;
   overscroll-behavior-y: contain;
 }
 
